[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # HTTP — async tile fetching, retries, connection pooling
    "httpx==0.27.2",
    # Certificate parsing — DER/PEM, X.509, TBS hash extraction
    "cryptography==42.0.8",
    # ClickHouse client — async, native protocol
    "clickhouse-connect==0.7.19",
    # Redis — streams, checkpointing, queuing
    "redis==5.0.8",
    # API framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    # Data validation
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    # Async DNS resolution
    "aiodns==3.2.0",
    # IP/ASN lookups (local MaxMind GeoLite2 DB)
    "maxminddb==2.6.2",
    # Structured logging
    "structlog==24.4.0",
    # TLD extraction for apex domain parsing
    "tldextract==5.1.2",
    # WHOIS domain registration date (no PII — only creation_date used)
    "python-whois>=0.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.32.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "enrichment*", "signals*", "api*", "db*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
